# usd-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  build.sh  checklist.md  run  run.sh
.github/workflows/: ci.yml
docs/: index.html
include/: wrapper.h  wrapper.hpp
src/: lib.rs
usd-basic-types/: Cargo.toml
usd-basic-types/src/: main.rs
usd-cpp/: Cargo.toml  README.md  build.rs  remove_binaries.sh
usd-cpp/src/: lib.rs
usd-examples/: Cargo.toml
usd-examples/src/: main.rs
usd-rs/: Cargo.toml  README.md  build.rs
usd-rs-tests/: Cargo.toml
usd-rs-tests/src/: lib.rs  path.rs  schema.rs  stage.rs  token.rs
usd-rs/src/: lib.rs
usd-rs/src/pxr/: error.rs  mod.rs  result.rs
usd-rs/src/pxr/sdf/: asset_path.rs  layer_handle.rs  layer_handle_vector.rs  mod.rs  path.rs  path_vector.rs  schema.rs  test_path.rs  test_schema.rs  time_code.rs  value_type_name.rs
usd-rs/src/pxr/tf/: mod.rs  pointer_and_bits.rs  token.rs
usd-rs/src/pxr/usd/: attribute.rs  attribute_vector.rs  common.rs  mod.rs  prim.rs  prim_range.rs  references.rs  relationship.rs  stage.rs  test_stage.rs  time_code.rs
usd-rs/src/pxr/usd/usd_geom/: mesh.rs  mod.rs  primvar.rs  xform_cache.rs
usd-rs/src/pxr/usd/usd_shade/: material.rs  mod.rs  shader.rs
usd-rs/src/pxr/usd_geom/: mesh.rs  mod.rs  primvar.rs  xform_cache.rs
usd-rs/src/pxr/usd_shade/: material.rs  mod.rs  shader.rs
usd-rs/src/pxr/vt/: array.rs  basic_types.rs  mod.rs  value.rs
