[package]
name = "usd-cpp"
version = "0.1.0"
authors = ["Luke Titley <from+usd_rs@luketitley.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Downloads and builds the cpp shared libraries for USD, see usd-rs"
repository = "https://github.com/luke-titley/usd-rs"

[lib]
crate-type = ["dylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
