[package]
name = "usd-cpp"
version = "0.1.1"
authors = ["Luke Titley <from+crates_io@luketitley.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Downloads and builds the cpp shared libraries for USD, see usd-rs"
repository = "https://github.com/luke-titley/usd-rs"
exclude = [
    "*testenv*",
    "*.exr",
    "*.usdc",
    #"thirdparty/USD/extras",
]

[lib]
crate-type = ["dylib"]

[build-dependencies]
fs_extra = "1.2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
