[package]
name = "usd"
version = "0.1.0"
authors = ["Luke Titley <from+usd_rs@luketitley.com>"]
edition = "2018"

[lib]
crate-type = ["dylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
usd-cpp = {path="../usd-cpp", version="0.1.0"} # We need this for the libs at link time
cpp = "0.5"

[build-dependencies]
usd-cpp = {path="../usd-cpp", version="0.1.0"} # We need this for the headers at build time
cpp_build = "0.5"
