[package]
name = "usd"
version = "0.0.7"
authors = ["Luke Titley <from+crates_io@luketitley.com>"]
edition = "2018"
license = "Apache-2.0"
description = "The beginnings of rust bindings for USD"
repository = "https://github.com/luke-titley/usd-rs"
keywords = ["vfx", "graphics", "scene_description", "scene_graph", "alembic"]

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]

[lib]
crate-type = ["dylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
usd-cpp = {path="../usd-cpp", version="0.1.1"} # We need this for the libs at link time
cpp = "0.5"
static_assertions = "1.1.0"
half = "1.6.0"

[build-dependencies]
usd-cpp = {path="../usd-cpp", version="0.1.1"} # We need this for the headers at build time
cpp_build = "0.5"
fs_extra = "1.2.0"
